# onec_codetemplate_parser

./: .gitignore  Readme.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
onec_codetemplate_parser/: __init__.py  api.py  cli.py  core.py  main.py  parser.py  repository.py
tests/: common.py  conftest.py  pytest.ini  test_01.py  test_api.py  test_cli.py  test_core.py
tests/data/: 01-one.st  02-brackets.st
tests/fixtures/: 02-brackets.st  02-one+.st  my_list.txt
